--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -55,5 +55,10 @@ sync_with_github:
       fi
 
     # Push to GitHub
-    - git push github main
+    - git push github main:mirror-sync
+
+    # Create pull request
+    - curl -X POST -H "Authorization: token $GITHUB_MIRROR_TOKEN" \
+     -d '{"title":"[SYNC] GitLab → GitHub","head":"mirror-sync","base":"main"}' \
+     https://api.github.com/repos/UvA-FNWI/CanvasGradeImport/pulls
 
