--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,12 +44,13 @@ sync_with_github:
     - git checkout -B main origin/main
 
     # Merge GitHub main into GitLab main (allow unrelated histories first time)
-    - git merge github/main --allow-unrelated-histories --no-edit || true
+    - echo "Using .gitattributes merge rules"
+    - git merge github/main --allow-unrelated-histories --no-edit
 
     # Commit only if changes exist
     - |
       if [ -n "$(git status --porcelain)" ]; then
-        git commit -am "[SYNC] GitLab ↔ GitHub sync"
+        git commit -am "[SYNC] GitLab -> GitHub sync"
       else
         echo "No changes from GitHub to sync."
       fi
@@ -99,18 +100,24 @@ pull_github_into_gitlab:
     - git fetch github main
 
     # Checkout local main
-    - git checkout main
+    - git checkout -B main origin/main
 
     # Merge GitHub main into GitLab main
-    - git merge github/main --no-edit || true
+    - git merge github/main --allow-unrelated-histories --no-edit
+    - |
+      if git ls-files -u | grep .;
+        then echo "Merge conflicts detected. Aborting."
+        exit 1
+      fi
 
     # Commit only if there are real changes
     - |
       if [ -n "$(git status --porcelain)" ]; then
-        git commit -am "[SYNC] GitHub → GitLab sync"
+        git commit -am "[SYNC] GitHub -> GitLab sync"
       else
         echo "No changes from GitHub to sync."
       fi
 
     # Push merged changes back to GitLab main
+    - git remote set-url origin https://$GITLAB_MIRROR_USER:$GITLAB_MIRROR_TOKEN@$CI_SERVER_HOST/$CI_PROJECT_PATH.git
     - git push origin main
